[Mac] Guard against LSSharedFileListItemResolve() crasher.

In GetLoginItemForApp() we call LSSharedFileListItemResolve(). There
are crashers because the function apparently can return a NULL CFURLRef
even when the function itself returns noErr. This cl checks that the
returned CFURLRef is non-NULL before proceeding.

R=mark@chromium.org

Bug: 760989
Change-Id: Ibb37ceae4b7ccb6765d10392fa786d3fea05eded
Reviewed-on: https://chromium-review.googlesource.com/669879
Reviewed-by: Mark Mentovai <mark@chromium.org>
Commit-Queue: Jayson Adams <shrike@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502711}
Former-commit-id: 2821e85855fb4336a21635553b7d72baaf6e2c4d